k8s/istio/prometheus-service-for-kiali.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: prometheus
  name: prometheus
  namespace: istio-system
spec:
  type: ClusterIP
  ports:
  - port: 9090
    targetPort: 30090
