k8s/istio/gateway-http.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: baway-gateway-http
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - git.baway.org.cn
    - grafana.baway.org.cn
    - jenkins.baway.org.cn
    - kuboard.baway.org.cn
    - prometheus.baway.org.cn
    - jumpserver.baway.org.cn
    - zabbix.baway.org.cn
    - kibana.baway.org.cn
    - nacos.baway.org.cn
    - skywalking.baway.org.cn
    - ceph.baway.org.cn
    - mall.baway.org.cn
    - mall-gateway.baway.org.cn
    - mall-portal.baway.org.cn
    - mall-monitor.baway.org.cn
    - mall-doc.baway.org.cn
    - download.baway.org.cn
    - kiali.baway.org.cn
    - gray.baway.org.cn
