k8s/istio/gateway-https.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: baway-gateway-https
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH 
    hosts:
    - ldapadm.baway.org.cn
