k8s/istio/gateway-tcp.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: baway-gateway-tcp
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 31579
      name: tcp
      protocol: TCP
    hosts:
    - git.baway.org.cn
